--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@500&family=Poppins:wght@300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Jost:wght@500&family=Poppins:wght@300&display=swap'); */
